# zero2prod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yaml
.sqlx/: query-e610f0a2f9bf1849a3377f1eddf40affde129bd4ad4fd0bc024317c0645c5bf5.json
configuration/: base.yaml
migrations/: 20240905194824_create_thread_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/routes/: reply.rs
tests/: health_check.rs
